assets/css/header.css
.header {
    display: flex;
    width: 100%;
    height: 48px;
    font-family: 'Maven Pro', sans-serif;
    flex-wrap: wrap;
    position: fixed;
    z-index: 999;
    background-color: #fff;
}

.logo {
    width: 106px;
    background: -webkit-linear-gradient(to bottom right, #c09, #f42 85%);
    background: -moz-linear-gradient(to bottom right, #c09, #f42 85%);
    background: -ms-linear-gradient(to bottom right, #c09, #f42 85%);
    background: -o-linear-gradient(to bottom right, #c09, #f42 85%);
    background: linear-gradient(to bottom right, #c09, #f42 85%);
}


.nav {
    width: 77%;
}

.logo img {
    position: relative;
    top: 35%;
    left: 17%;
}


.top-nav {
    visibility: hidden;

}

.bottom-nav {
    line-height: 48px;
    width: 100%;
    border-right: none;
    display: flex;
}

.bottom-nav * {
    text-align: center;
}


.time-remaining {
    color: #ff4422;
    width: 74%;
    font-family: 'Ropa Sans', sans-serif;
    font-size: 1.4em;
    letter-spacing: 2px;
    border-right: 1px solid rgba(121, 121, 121, 0.15);
}


.search-btn {
    font-size: 20px;
    width: 13%;
    color: #a0a0a0;
    border-right: 1px solid rgba(121, 121, 121, 0.15);
}

.search-btn:hover {
    cursor: pointer;
    color: #838383;

}

.hamburger-btn {
    color: #ff4422;
    font-size: 1.3em;
    cursor: pointer;
    width: 13%;
    font-weight: bolder;
}

.ticket {
    width: 100%;
    background-color: #ffdd33;
    text-align: center;
    color: black;
    height: 30px;
    line-height: 30px;
    font-family: 'Maven Pro', sans-serif;
    font-weight: 600;
    font-size: .6em;
}

.content {
    height: 20vh;
}

